--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,4 +1,4 @@
-# 日志级别
+# \u65e5\u5fd7\u7ea7\u522b
 log4j.rootLogger=DEBUG, webpage, console, fileDebug, fileInfo, fileError
 log4j.rootLogger.encoding=UTF-8
 
@@ -11,23 +11,21 @@ log4j.logger.oracle=WARN
 log4j.logger.com.alibaba.druid=WARN
 log4j.logger.SYSTEM = INFO
 
-# 输出到控制台
+# \u8f93\u51fa\u5230\u63a7\u5236\u53f0
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.encoding=UTF-8
-log4j.appender.console.Append=true
 log4j.appender.console.Threshold=DEBUG
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%n%-d{yyyy-MM-dd HH:mm:ss}%n[%p]-[Thread: %t]-[%C.%M()]: %m%n
 
-# 输出到web页面
+# \u8f93\u51fa\u5230web\u9875\u9762
 log4j.appender.webpage=little.ant.platform.servlet.Log4jAppender
 log4j.appender.webpage.encoding=UTF-8
-log4j.appender.webpage.Append=true
 log4j.appender.webpage.Threshold=DEBUG
 log4j.appender.webpage.layout=org.apache.log4j.PatternLayout
 log4j.appender.webpage.layout.ConversionPattern=%d %p [%c] - %m%n
 
-# 输出到文件 debug
+# \u8f93\u51fa\u5230\u6587\u4ef6 debug
 log4j.appender.fileDebug=org.apache.log4j.RollingFileAppender
 log4j.appender.fileDebug.encoding=UTF-8
 log4j.appender.fileDebug.Append=true
@@ -38,7 +36,7 @@ log4j.appender.fileDebug.MaxBackupIndex=1000
 log4j.appender.fileDebug.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileDebug.layout.ConversionPattern=JfinalUIB %-d{yyyy-MM-dd HH:mm:ss.SSS} %p [%t] <%F [%L] - %M> <%m> %X{traceId}%n
 
-# 输出到文件 info
+# \u8f93\u51fa\u5230\u6587\u4ef6 info
 log4j.appender.fileInfo=org.apache.log4j.RollingFileAppender
 log4j.appender.fileInfo.encoding=UTF-8
 log4j.appender.fileInfo.Append=true
@@ -49,7 +47,7 @@ log4j.appender.fileInfo.MaxBackupIndex=500
 log4j.appender.fileInfo.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileInfo.layout.ConversionPattern=JfinalUIB %-d{yyyy-MM-dd HH:mm:ss.SSS} %p [%t] <%F [%L] - %M> <%m>%n
 
-# 输出到文件 error
+# \u8f93\u51fa\u5230\u6587\u4ef6 error
 log4j.appender.fileError=org.apache.log4j.RollingFileAppender
 log4j.appender.fileError.encoding=UTF-8
 log4j.appender.fileError.Append=true
@@ -60,14 +58,14 @@ log4j.appender.fileError.MaxBackupIndex=100
 log4j.appender.fileError.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileError.layout.ConversionPattern=JfinalUIB %-d{yyyy-MM-dd HH:mm:ss.SSS} %p [%t] <%l> %m%n
 
-# ConversionPattern参数的格式含义 
-# 格式名 含义 
-# %c 输出日志信息所属的类的全名 
-# %d 输出日志时间点的日期或时间，默认格式为ISO8601，也可以在其后指定格式，比如：%d{yyy-MM-dd HH:mm:ss }，输出类似：2002-10-18- 22：10：28 
-# %f 输出日志信息所属的类的类名 
-# %l 输出日志事件的发生位置，即输出日志信息的语句处于它所在的类的第几行 
-# %m 输出代码中指定的信息，如log(message)中的message 
-# %n 输出一个回车换行符，Windows平台为“rn”，Unix平台为“n” 
-# %p 输出优先级，即DEBUG，INFO，WARN，ERROR，FATAL。如果是调用debug()输出的，则为DEBUG，依此类推 
-# %r 输出自应用启动到输出该日志信息所耗费的毫秒数 
-# %t 输出产生该日志事件的线程名
+# ConversionPattern\u53c2\u6570\u7684\u683c\u5f0f\u542b\u4e49 
+# \u683c\u5f0f\u540d \u542b\u4e49 
+# %c \u8f93\u51fa\u65e5\u5fd7\u4fe1\u606f\u6240\u5c5e\u7684\u7c7b\u7684\u5168\u540d 
+# %d \u8f93\u51fa\u65e5\u5fd7\u65f6\u95f4\u70b9\u7684\u65e5\u671f\u6216\u65f6\u95f4\uff0c\u9ed8\u8ba4\u683c\u5f0f\u4e3aISO8601\uff0c\u4e5f\u53ef\u4ee5\u5728\u5176\u540e\u6307\u5b9a\u683c\u5f0f\uff0c\u6bd4\u5982\uff1a%d{yyy-MM-dd HH:mm:ss }\uff0c\u8f93\u51fa\u7c7b\u4f3c\uff1a2002-10-18- 22\uff1a10\uff1a28 
+# %f \u8f93\u51fa\u65e5\u5fd7\u4fe1\u606f\u6240\u5c5e\u7684\u7c7b\u7684\u7c7b\u540d 
+# %l \u8f93\u51fa\u65e5\u5fd7\u4e8b\u4ef6\u7684\u53d1\u751f\u4f4d\u7f6e\uff0c\u5373\u8f93\u51fa\u65e5\u5fd7\u4fe1\u606f\u7684\u8bed\u53e5\u5904\u4e8e\u5b83\u6240\u5728\u7684\u7c7b\u7684\u7b2c\u51e0\u884c 
+# %m \u8f93\u51fa\u4ee3\u7801\u4e2d\u6307\u5b9a\u7684\u4fe1\u606f\uff0c\u5982log(message)\u4e2d\u7684message 
+# %n \u8f93\u51fa\u4e00\u4e2a\u56de\u8f66\u6362\u884c\u7b26\uff0cWindows\u5e73\u53f0\u4e3a\u201crn\u201d\uff0cUnix\u5e73\u53f0\u4e3a\u201cn\u201d 
+# %p \u8f93\u51fa\u4f18\u5148\u7ea7\uff0c\u5373DEBUG\uff0cINFO\uff0cWARN\uff0cERROR\uff0cFATAL\u3002\u5982\u679c\u662f\u8c03\u7528debug()\u8f93\u51fa\u7684\uff0c\u5219\u4e3aDEBUG\uff0c\u4f9d\u6b64\u7c7b\u63a8 
+# %r \u8f93\u51fa\u81ea\u5e94\u7528\u542f\u52a8\u5230\u8f93\u51fa\u8be5\u65e5\u5fd7\u4fe1\u606f\u6240\u8017\u8d39\u7684\u6beb\u79d2\u6570 
+# %t \u8f93\u51fa\u4ea7\u751f\u8be5\u65e5\u5fd7\u4e8b\u4ef6\u7684\u7ebf\u7a0b\u540d
